d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/LQW_Question_List__c.object-meta.xml
<CustomObject>
            <description>Stores different sets of qualification questions that can be assigned to leads based on criteria such as industry, company size, or lead source. Each question list contains a curated set of questions appropriate for specific lead types. Administrators can create multiple active question lists and assign them to leads manually or through automation. The Name field is an auto-number field labeled &#x27;List Number&#x27; (e.g., QL-0001), and a separate &#x27;List Name&#x27; text field allows administrators to provide descriptive, user-friendly names.</description>
            <label>Question List</label>
            <nameField>
                <displayFormat>QL-{00000}</displayFormat>
                <label>List Number</label>
                <type>AutoNumber</type>
            </nameField>
            <pluralLabel>Question Lists</pluralLabel>
            <sharingModel>ReadWrite</sharingModel>
        </CustomObject>