d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/fields/LQW_Assignment_Criteria__c.field-meta.xml
<CustomField>
            <fullName>LQW_Assignment_Criteria__c</fullName>
            <label>Assignment Criteria</label>
            <description>JSON representation of assignment criteria set by the trigger handler code. Never edited by users. The LWC parses this JSON and displays it as human-readable natural language. Example: [{&quot;field&quot;:&quot;LeadSource&quot;,&quot;label&quot;:&quot;Lead Source&quot;,&quot;operator&quot;:&quot;equals&quot;,&quot;value&quot;:&quot;Web&quot;}]</description>
            <type>LongTextArea</type>
            <length>32768</length>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>

        </CustomField>