d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/fields/LQW_Description__c.field-meta.xml
<CustomField>
            <fullName>LQW_Description__c</fullName>
            <label>Description</label>
            <description>Detailed description of the question list purpose, usage guidelines, and the types of leads this list is intended for. Helps administrators document the criteria and business logic for when this question list should be used.</description>
            <type>LongTextArea</type>
            <length>32768</length>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>

        </CustomField>