d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/fields/LQW_High_Quality_Label__c.field-meta.xml
<CustomField>
            <fullName>LQW_High_Quality_Label__c</fullName>
            <label>High Quality Label</label>
            <description>Customizable display label for the High Quality tier. Allows admins to rename tiers per list (e.g., &#x27;Hot Lead&#x27;, &#x27;Priority A&#x27;). Displayed in the wizard rank indicator and scoring guide.</description>
            <type>Text</type>
            <length>80</length>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>