d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/fields/LQW_Is_Active__c.field-meta.xml
<CustomField>
            <fullName>LQW_Is_Active__c</fullName>
            <label>Is Active</label>
            <description>Controls whether this question list is active and available for assignment to leads. Inactive question lists will not be displayed in the wizard or available for selection in flows and automation.</description>
            <type>Checkbox</type>
            <defaultValue>true</defaultValue>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>