d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/fields/LQW_Is_Default__c.field-meta.xml
<CustomField>
            <fullName>LQW_Is_Default__c</fullName>
            <label>Is Default</label>
            <description>Marks this question list as the fallback when no criteria match a lead. Only one list should be marked as default. Used by the trigger handler for fallback assignment.</description>
            <type>Checkbox</type>
            <defaultValue>false</defaultValue>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>