d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/fields/LQW_List_Name__c.field-meta.xml
<CustomField>
            <fullName>LQW_List_Name__c</fullName>
            <label>List Name</label>
            <description>User-friendly name for the question list. Administrators can provide descriptive names like &#x27;Enterprise Leads&#x27;, &#x27;SMB Leads&#x27;, or &#x27;Partner Leads&#x27; for easy identification and selection.</description>
            <type>Text</type>
            <length>255</length>
            <required>true</required>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>