d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/fields/LQW_Medium_Quality_Recommendation__c.field-meta.xml
<CustomField>
            <fullName>LQW_Medium_Quality_Recommendation__c</fullName>
            <label>Medium Quality Recommendation</label>
            <description>Recommended action for leads in the Medium Quality tier. Displayed in the wizard as guidance text below the rank indicator. Admins can customize per list.</description>
            <type>Text</type>
            <length>255</length>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>