d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/fields/LQW_Medium_Quality_Threshold__c.field-meta.xml
<CustomField>
            <fullName>LQW_Medium_Quality_Threshold__c</fullName>
            <label>Medium Quality Threshold</label>
            <description>Minimum points required for a lead to be ranked as Medium Quality. Used by the wizard to dynamically determine lead ranking. Auto-suggested based on total possible points (approximately 33% of total).</description>
            <type>Number</type>
            <precision>5</precision>
            <scale>0</scale>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
        </CustomField>