d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Question_List__c/listViews/LQW_All_Question_Lists.listView-meta.xml
<ListView>
            <fullName>LQW_All_Question_Lists</fullName>
            <label>All Question Lists</label>
            <filterScope>Everything</filterScope>
            
            <columns>NAME</columns>
            
            <columns>LQW_List_Name__c</columns>
            
            <columns>LQW_Is_Active__c</columns>
            
            <columns>LQW_Description__c</columns>
            
            <columns>CREATED_DATE</columns>

        </ListView>